--- a/.stversions/docker-nginx-proxymgr/docker-compose~20240627-192234.yml
+++ b/.stversions/docker-nginx-proxymgr/docker-compose~20240627-192234.yml
@@ -2,7 +2,7 @@ version: '3.8'
 services:
   app:
     image: 'jc21/nginx-proxy-manager:2.11.1'
-    restart: always
+    restart: unless-stopped
     ports:
       - '80:80'
       - '81:81'
