--- a/docker-zabbix/docker-compose-nopsql.yml
+++ b/docker-zabbix/docker-compose-nopsql.yml
@@ -8,6 +8,7 @@ services:
       placement:
         constraints:
           - node.role == worker
+          - node.labels.location != cloud
     networks:
       - zabbix-net  
     depends_on:
