--- a/docker-zabbix/start.env.sample
+++ b/docker-zabbix/start.env.sample
@@ -4,4 +4,9 @@ POSTGRES_PASSWORD_FILE=/run/secrets/POSTGRES_PASSWORD
 DB_SERVER_HOST=postgres-zabbix
 DB_SERVER_PORT=5432
 ZBX_SERVER_HOST=zabbix-server
-PHP_TZ=Europe/London 
+PHP_TZ=Europe/London
+# Setting for pg_dump 
+PGUSER=zabbix
+PGHOST=postgres-zabbix
+PGPORT=5432
+DATA_SOURCE_URI=postgres-zabbix?sslmode=disable
