--- a/docker-zabbix/Jenkinsfile
+++ b/docker-zabbix/Jenkinsfile
@@ -54,7 +54,7 @@ pipeline {
                     def composeFile = "docker-compose.yml"
 
                     // Check if EXTERNAL_POSTGRES is 'true' and adjust compose file accordingly
-                    if (params.EXTERNAL_POSTGRES == 'true') {
+                    if (params.EXTERNAL_POSTGRES.toBoolean() == 'true') {
                         composeFile = "docker-compose-nopsql.yml"
                     }
 
