--- a/docker-zabbix/Jenkinsfile
+++ b/docker-zabbix/Jenkinsfile
@@ -52,6 +52,7 @@ pipeline {
             steps {                
                 script {
                     def composeFile = "docker-compose.yml"
+                    println "value is: ${params.EXTERNAL_POSTGRES}"
 
                     // Check if EXTERNAL_POSTGRES is 'true' and adjust compose file accordingly
                     if (params.EXTERNAL_POSTGRES.toBoolean() == 'true') {
