Trying ot fix Telegram sending issue

--- a/docker-zabbix/docker-compose-nopsql.yml
+++ b/docker-zabbix/docker-compose-nopsql.yml
@@ -57,7 +57,9 @@ services:
           cpus: '1.5'
           memory: 750M   
     env_file:
-      - start.env       
+      - start.env    
+    environment:
+      - ZBX_SOURCEIP=0.0.0.0     
     secrets:
       - POSTGRES_USER
       - POSTGRES_PASSWORD   
