--- a/docker-portainer/portainer-agent-stack.yml
+++ b/docker-portainer/portainer-agent-stack.yml
@@ -1,8 +1,8 @@
-version: '3.2'
+version: "3.2"
 
 services:
   agent:
-    image: portainer/agent:2.19.4
+    image: portainer/agent:2.21.4
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - /var/lib/docker/volumes:/var/lib/docker/volumes
@@ -16,7 +16,7 @@ services:
         constraints: [node.platform.os == linux]
 
   portainer:
-    image: portainer/portainer-ce:2.19.4
+    image: portainer/portainer-ce:2.21.4
     ports:
       - "9443:9443"
       - "9000:9000"
@@ -40,12 +40,7 @@ networks:
 volumes:
   portainer_data:
     driver: local
-    # driver_opts:
-    #   type: "nfs"
-    #   o: "addr=nas,rsize=65536,wsize=65536,timeo=300,tcp,rw,noatime,vers=4.1"
-    #   device: ":/mnt/vm_pool/misc/portainer_data"
     driver_opts:
       type: none
       device: /data/portainer_data
       o: bind
-
