--- a/docker-portainer/portainer-agent-stack-debug.yml
+++ b/docker-portainer/portainer-agent-stack-debug.yml
@@ -1,4 +1,4 @@
-version: '3.2'
+version: "3.2"
 
 services:
   agent:
@@ -52,12 +52,7 @@ networks:
 volumes:
   portainer_data:
     driver: local
-    # driver_opts:
-    #   type: "nfs"
-    #   o: "addr=nas,rsize=65536,wsize=65536,timeo=300,tcp,rw,noatime,vers=4.1"
-    #   device: ":/mnt/vm_pool/misc/portainer_data"
     driver_opts:
       type: none
-      device: /data_gb/portainer_data
+      device: /data/portainer_data
       o: bind
-
