--- a/docker-jenkins/Makefile
+++ b/docker-jenkins/Makefile
@@ -1,6 +1,7 @@
 # Variables
 STACK_NAME := jenkins
 COMPOSE_FILE := docker-compose.yml
+DOCKER_CONTEXT ?= default  # Default context if not specified
 
 # Default target
 .PHONY: all
@@ -9,31 +10,36 @@ all: deploy
 # Initialize Docker Swarm (if not already done)
 .PHONY: init-swarm
 init-swarm:
-	@docker swarm init || echo "Swarm already initialized"
+	@docker --context $(DOCKER_CONTEXT) swarm init || echo "Swarm already initialized or not needed."
 
 # Deploy Jenkins stack
 .PHONY: deploy
 deploy: init-swarm
-	@docker stack deploy -c $(COMPOSE_FILE) $(STACK_NAME) 
-	@echo "Jenkins stack deployed."
+	@export $(shell grep -v '^#' .env | xargs) && \
+	envsubst < $(COMPOSE_FILE) | docker --context $(DOCKER_CONTEXT) stack deploy -c - $(STACK_NAME)
+	@rm -f /tmp/rendered-compose.yml
+	@echo "${STACK_NAME} stack deployed to context '$(DOCKER_CONTEXT)'."
 
 # Check the status of the services
 .PHONY: status
 status:
-	@docker stack services $(STACK_NAME)
+	@docker --context $(DOCKER_CONTEXT) stack services $(STACK_NAME)
 
-# Remove the Jenkins stack
+# Remove the stack
 .PHONY: remove
 remove:
-	@docker stack rm $(STACK_NAME)
-	@echo "Jenkins stack removed."
+	@echo "Removing stack '$(STACK_NAME)'..."
+	@docker --context $(DOCKER_CONTEXT) stack rm $(STACK_NAME)	
+	@echo "Removing volumes for stack '$(STACK_NAME)'..."
+	@bash -c 'docker --context $(DOCKER_CONTEXT) volume rm $(docker --context $(DOCKER_CONTEXT) volume ls -q --filter label=com.docker.stack.namespace=$(STACK_NAME)) || echo "No volumes to remove."'
+	@echo "${STACK_NAME} stack removed from context '$(DOCKER_CONTEXT)'."
 
 # Clean up any unused Docker resources
 .PHONY: cleanup
 cleanup:
-	@docker system prune -f
+	@docker --context $(DOCKER_CONTEXT) system prune -f
 
 # View logs of the Jenkins service
 .PHONY: logs
 logs:
-	@docker service logs $(STACK_NAME)_jenkins -f
+	@docker --context $(DOCKER_CONTEXT) service logs $(STACK_NAME)_jenkins -f
