--- a/docker-monitoring/docker-compose.yaml
+++ b/docker-monitoring/docker-compose.yaml
@@ -1,7 +1,6 @@
-version: '3.1'
+version: "3.1"
 
 services:
-  
   grafana:
     image: grafana/grafana:10.3.5
     ports:
@@ -11,7 +10,7 @@ services:
     environment:
       - GF_SECURITY_ADMIN_USER=${ADMIN_USER:-admin}
       - GF_SECURITY_ADMIN_PASSWORD=${ADMIN_PASSWORD:-admin}
-      - GF_USERS_ALLOW_SIGN_UP=false   
+      - GF_USERS_ALLOW_SIGN_UP=false
     deploy:
       placement:
         constraints:
@@ -20,11 +19,11 @@ services:
         limits:
           memory: 128M
         reservations:
-          memory: 64M      
+          memory: 64M
     networks:
       - monitor-net
     labels:
-      org.label-schema.group: "monitoring"        
+      org.label-schema.group: "monitoring"
 
   nodeexporter:
     image: prom/node-exporter:v1.7.0
@@ -41,28 +40,28 @@ services:
         limits:
           memory: 128M
         reservations:
-          memory: 64M  
+          memory: 64M
     volumes:
       - /proc:/host/proc:ro
       - /sys:/host/sys:ro
       - /:/rootfs:ro
       - /etc/hostname:/etc/nodename
     command:
-      - '--path.procfs=/host/proc'
-      - '--path.rootfs=/rootfs'
-      - '--path.sysfs=/host/sys'
-      - '--collector.filesystem.ignored-mount-points=^/(sys|proc|dev|host|etc)($$|/)'
-      - '--no-collector.ipvs'
+      - "--path.procfs=/host/proc"
+      - "--path.rootfs=/rootfs"
+      - "--path.sysfs=/host/sys"
+      - "--collector.filesystem.ignored-mount-points=^/(sys|proc|dev|host|etc)($$|/)"
+      - "--no-collector.ipvs"
     networks:
-      - monitor-net    
+      - monitor-net
     ports:
-      - 9100:9100        
+      - 9100:9100
     labels:
       org.label-schema.group: "monitoring"
 
   cadvisor:
-    image: nazman/cadvisor:v0.49.1    
-    command: --logtostderr=true 
+    image: nazman/cadvisor:v0.49.1
+    command: --logtostderr=true
     deploy:
       mode: global
       restart_policy:
@@ -73,18 +72,18 @@ services:
         limits:
           memory: 128M
         reservations:
-          memory: 64M    
+          memory: 64M
     volumes:
       - /:/rootfs:ro
       - /var/run:/var/run:ro
       - /sys:/sys:ro
       - /var/lib/docker/:/var/lib/docker:ro
-      - /dev/disk/:/dev/disk:ro  
+      - /dev/disk/:/dev/disk:ro
     networks:
-      - monitor-net     
+      - monitor-net
     ports:
-      - 8080:8080    
-    labels: 
+      - 8080:8080
+    labels:
       org.label-schema.group: "monitoring"
 
   prometheus:
@@ -100,25 +99,25 @@ services:
         limits:
           memory: 1.5G
         reservations:
-          memory: 128M      
+          memory: 128M
     volumes:
       - prometheus_config:/etc/prometheus
       - prometheus_data:/prometheus
       # - /var/run/docker.sock:/var/run/docker.sock:ro
-    user: 65534:999  
+    user: 65534:999
     command:
-      - '--config.file=/etc/prometheus/prometheus.yml'
-      - '--storage.tsdb.path=/prometheus'
-      - '--web.console.libraries=/etc/prometheus/console_libraries'
-      - '--web.console.templates=/etc/prometheus/consoles'
-      - '--storage.tsdb.retention.time=2d'
-      - '--web.enable-lifecycle'
+      - "--config.file=/etc/prometheus/prometheus.yml"
+      - "--storage.tsdb.path=/prometheus"
+      - "--web.console.libraries=/etc/prometheus/console_libraries"
+      - "--web.console.templates=/etc/prometheus/consoles"
+      - "--storage.tsdb.retention.time=2d"
+      - "--web.enable-lifecycle"
     ports:
       - 9090:9090
     networks:
-      - monitor-net    
+      - monitor-net
     labels:
-      org.label-schema.group: "monitoring" 
+      org.label-schema.group: "monitoring"
 
   dockerproxy:
     image: ghcr.io/tecnativa/docker-socket-proxy:latest
@@ -128,29 +127,29 @@ services:
         constraints:
           - "node.role==manager"
     environment:
-        - CONTAINERS=1 # Allow access to viewing containers
-        - SERVICES=1 # Allow access to viewing services (necessary when using Docker Swarm)
-        - TASKS=1 # Allow access to viewing tasks (necessary when using Docker Swarm)
-        - NODES=1 # Allow access to viewing nodes (necessary when using Docker Swarm)
-        - POST=0 # Disallow any POST operations (effectively read-only)
-        - SWARM=1
-        - NETWORKS=1
-        - VOLUMES=1
+      - CONTAINERS=1 # Allow access to viewing containers
+      - SERVICES=1 # Allow access to viewing services (necessary when using Docker Swarm)
+      - TASKS=1 # Allow access to viewing tasks (necessary when using Docker Swarm)
+      - NODES=1 # Allow access to viewing nodes (necessary when using Docker Swarm)
+      - POST=0 # Disallow any POST operations (effectively read-only)
+      - SWARM=1
+      - NETWORKS=1
+      - VOLUMES=1
     ports:
-        - 127.0.0.1:2375:2375
+      - 127.0.0.1:2375:2375
     volumes:
-        - /var/run/docker.sock:/var/run/docker.sock:ro # Mounted as read-only
+      - /var/run/docker.sock:/var/run/docker.sock:ro # Mounted as read-only
     restart: unless-stopped
     networks:
-      - monitor-net 
+      - monitor-net
     labels:
-      org.label-schema.group: "monitoring"          
+      org.label-schema.group: "monitoring"
 
   alertmanager:
     image: quay.io/prometheus/alertmanager:v0.26.0
     command:
-      - '--config.file=/etc/alertmanager/alertmanager.yml'
-      - '--storage.path=/alertmanager'
+      - "--config.file=/etc/alertmanager/alertmanager.yml"
+      - "--storage.path=/alertmanager"
     volumes:
       - alertmanager:/etc/alertmanager
     deploy:
@@ -160,49 +159,49 @@ services:
         limits:
           memory: 128M
         reservations:
-          memory: 64M  
+          memory: 64M
     environment:
       - SLACK_URL=${SLACK_URL:-https://hooks.slack.com/services/TOKEN}
       - SLACK_CHANNEL=${SLACK_CHANNEL:-general}
-      - SLACK_USER=${SLACK_USER:-alertmanager}      
+      - SLACK_USER=${SLACK_USER:-alertmanager}
     ports:
-      - 9093:9093          
+      - 9093:9093
     networks:
-      - monitor-net 
+      - monitor-net
     labels:
-      org.label-schema.group: "monitoring"   
+      org.label-schema.group: "monitoring"
 
 networks:
   monitor-net:
-  
+
 volumes:
-  prometheus_data:       
+  prometheus_data:
     driver: local
     driver_opts:
-      type: "nfs"
-      o: "addr=nas,tcp,rw,noatime,nfsvers=4"
-      device: ":/mnt/vm_pool/misc/prometheus_data"
+      type: "none"
+      o: "bind"
+      device: "/data/prometheus_data"
   prometheus_config:
     driver: local
     driver_opts:
-      type: "nfs"
-      o: "addr=nas,tcp,rw,noatime,nfsvers=4"
-      device: ":/mnt/vm_pool/misc/prometheus_config"
+      type: "none"
+      o: "bind"
+      device: "/data/prometheus_config"
   influx_db:
     driver: local
     driver_opts:
-      type: "nfs"
-      o: "addr=nas,tcp,rw,noatime,nfsvers=4"
-      device: ":/mnt/vm_pool/misc/influx_db"
+      type: "none"
+      o: "bind"
+      device: "/data/influx_db"
   grafana:
     driver: local
     driver_opts:
-      type: "nfs"
-      o: "addr=nas,tcp,rw,noatime,nfsvers=4"
-      device: ":/mnt/vm_pool/misc/grafana"
+      type: "none"
+      o: "bind"
+      device: "/data/grafana"
   alertmanager:
     driver: local
     driver_opts:
-      type: "nfs"
-      o: "addr=nas,tcp,rw,noatime,nfsvers=3"
-      device: ":/mnt/vm_pool/misc/alertmanager"    
+      type: "none"
+      o: "bind"
+      device: "/data/alertmanager"
