--- a/docker-portainer/Jenkinsfile
+++ b/docker-portainer/Jenkinsfile
@@ -1,56 +1,52 @@
 pipeline {
-   agent { label 'swarm && local' } 
-    
+    agent { label 'swarm && local' }
+
     environment {
-        DOCKER_STACK_NAME = 'portainer' 
-        DOCKER_COMPOSE_DIR = 'docker-portainer' // Path to docker-compose.yml 
+        DOCKER_STACK_NAME = 'portainer'
+        DOCKER_COMPOSE_DIR = 'docker-portainer' // Path to docker-compose.yml
         DOCKER_COMPOSE_FILE = 'portainer-agent-stack.yml'
-        IMAGE_VERSION = '2.21.4'      
+        IMAGE_VERSION = "${params.PORTAINER_VERSION}"
     }
-    
+
     stages {
         stage('Checkout') {
             steps {
                 git branch: 'master',
                 url: 'https://github.com/nazmang/docker.git'
             }
-            
         }
+
         stage('Create Files') {
             steps {
                 script {
                     def composeDir = "${env.WORKSPACE}/${env.DOCKER_COMPOSE_DIR}"
                     // Create .env file with parameters in DOCKER_COMPOSE_DIR
                     def startEnv = """
-                    PORTAINER_VERSION = ${env.IMAGE_VERSION}
+                    PORTAINER_VERSION=${env.IMAGE_VERSION}
                     """
-                    writeFile file: "${composeDir}/.env", text: startEnv
+                    writeFile file: "${composeDir}/.env", text: startEnv.trim()
                 }
             }
         }
-        stage('Deploy stack'){            
-            steps {                
-                script {
-                    
-                    dir("${env.DOCKER_COMPOSE_DIR}") {
-                        sh '''
-                            export ${shell grep -v '^#' .env | xargs} && \
-	                        envsubst < ${DOCKER_COMPOSE_FILE} | docker stack deploy -c - $(DOCKER_STACK_NAME)
 
-                        '''                 
-                        // sh "docker stack deploy -c ${env.DOCKER_COMPOSE_FILE} ${env.DOCKER_STACK_NAME}" 
-                    }
+        stage('Deploy stack') {
+            steps {
+                dir("${env.DOCKER_COMPOSE_DIR}") {
+                    sh """
+                        # Export environment variables from .env file
+                        export \$(grep -v '^#' .env | xargs -d '\\n')
+
+                        # Deploy Docker stack
+                        envsubst < ${env.DOCKER_COMPOSE_FILE} | docker stack deploy -c - ${env.DOCKER_STACK_NAME}
+                    """
                 }
             }
         }
-        
     }
+
     post {
-        always { 
+        always {
             cleanWs()
         }
-      //  success {}
-      //  failure {}
-      //  unstable{}
     }
 }
