Fixed gitleaks version

--- a/.github/workflows/hadolint.yml
+++ b/.github/workflows/hadolint.yml
@@ -52,9 +52,9 @@ jobs:
           wait-for-processing: true      
 
       - name: Run Gitleaks
-        uses: gitleaks/gitleaks-action@v3
+        uses: gitleaks/gitleaks-action@v2
         env:
-          GITLEAKS_LICENSE: ${{ secrets.GITLEAKS_LICENSE }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
         with:
           config-path: .gitleaks.toml    
 
