--- a/.github/workflows/hadolint.yml
+++ b/.github/workflows/hadolint.yml
@@ -11,9 +11,9 @@ name: Hadolint
 on:
   push:
     branches: [ "*" ]
-  pull_request:
+  #pull_request:
     # The branches below must be a subset of the branches above
-    branches: [ "master" ]
+   # branches: [ "master" ]
   schedule:
     - cron: '45 15 * * 6'
 
@@ -31,9 +31,6 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
-      - name: Check Docker Compose
-        run: docker compose config --quiet  
 
       - name: Run hadolint
         uses: hadolint/hadolint-action@f988afea3da57ee48710a9795b6bb677cc901183
