--- a/.github/workflows/hadolint.yml
+++ b/.github/workflows/hadolint.yml
@@ -32,7 +32,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Check if Dockerfile exists
+        id: check_dockerfile
+        uses: andstor/file-existence-action@v2
+        with:
+          file: ./Dockerfile  
+
       - name: Run hadolint
+        if: steps.check_dockerfile.outputs.exists == 'true'
         uses: hadolint/hadolint-action@f988afea3da57ee48710a9795b6bb677cc901183
         with:
           dockerfile: ./Dockerfile
@@ -43,6 +50,7 @@ jobs:
           reporter: github-pr-review # или github-check
 
       - name: Upload analysis results to GitHub
+        if: steps.check_dockerfile.outputs.exists == 'true'
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: hadolint-results.sarif
