--- a/.github/workflows/hadolint.yml
+++ b/.github/workflows/hadolint.yml
@@ -10,12 +10,12 @@ name: Hadolint
 
 on:
   push:
-    branches: [ "*" ]
+    branches: ["*"]
   #pull_request:
-    # The branches below must be a subset of the branches above
-   # branches: [ "master" ]
+  # The branches below must be a subset of the branches above
+  # branches: [ "master" ]
   schedule:
-    - cron: '45 15 * * 6'
+    - cron: "45 15 * * 6"
 
 permissions:
   contents: read
@@ -36,31 +36,28 @@ jobs:
         id: check_dockerfile
         uses: andstor/file-existence-action@v2
         with:
-          files: "./Dockerfile"  
+          files: "*/Dockerfile"
 
       - name: Run hadolint
         if: steps.check_dockerfile.outputs.exists == 'true'
         uses: hadolint/hadolint-action@f988afea3da57ee48710a9795b6bb677cc901183
         with:
-          dockerfile: ./Dockerfile
+          dockerfile: Dockerfile
+          recursive: true
           format: sarif
           output-file: hadolint-results.sarif
           no-fail: false
-          github_token: ${{ secrets.github_token }}
-          reporter: github-pr-review # или github-check
 
       - name: Upload analysis results to GitHub
         if: steps.check_dockerfile.outputs.exists == 'true'
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: hadolint-results.sarif
-          wait-for-processing: true      
+          wait-for-processing: true
 
       - name: Run Gitleaks
         uses: gitleaks/gitleaks-action@v2
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          config-path: .gitleaks.toml    
-
-          
+          config-path: .gitleaks.toml
