--- a/docker-jenkins/docker-compose.yml
+++ b/docker-jenkins/docker-compose.yml
@@ -14,6 +14,8 @@ services:
       - LETSENCRYPT_HOST=${LETSENCRYPT_HOST}
       - LETSENCRYPT_EMAIL=${LETSENCRYPT_EMAIL}
       - VIRTUAL_PORT=8080
+      - TZ=Europe/Moscow
+      - 'JAVA_OPTS=-Djava.util.logging.SimpleFormatter.format="[%1$tY-%1$tm-%1$td %1$tH:%1$tM:%1$tS] %4$s: %2$s - %5$s %6$s%n"'
     volumes:
       - jenkins_home:/var/jenkins_home
     deploy:
@@ -38,6 +40,8 @@ services:
         "jenkins-agent",
         "-url",
         "http://jenkins:8080/",
+        "-secret",
+        "${JENKINS_SECRET}",
         "-webSocket",
       ]
     init: true
@@ -46,7 +50,7 @@ services:
     networks:
       - jenkins_net
     environment:
-      - "JENKINS_URL=http://jenkins:8081"
+      - "JENKINS_URL=http://jenkins:8080"
     volumes:
       - /etc/localtime:/etc/localtime:ro
     deploy:
